--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/KanyA.JFIF" width="200" height="200" alt="Kany Anukwe Profile picture"></td>
+      <td><img src="images/KanyA.png" width="200" height="200" alt="Kany Anukwe Profile picture"></td>
       <td>
         <h1>Kany Anukwe </h1>
         <p> Beginer <b><a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">WEB DEVELOPER</b></a></p>
